fixed issue where mobile width was extended for transitions, used overflowx-hidden

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -50,6 +50,7 @@ body {
 	h3 {
 		color: $fontColor;
 	}
+	overflow-x: hidden;
 }
 
 .contact-custom {
@@ -111,4 +112,9 @@ body {
 	margin: 0px;
 	border-top: 1px solid #d1cdc7;
 	opacity: 0.25;
+}
+
+.skillCard {
+	min-width: 18em;
+	width: 18em;
 }
